crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__magic_tests__forecast_of_frost_on_an_absorbing_target_snapshot.snap
---
source: crates/ui/src/screens/battle/magic_tests.rs
expression: buf.to_snapshot(&c.palette)
---
                                    ┌─ Frost 10/10 ──────────────────┐╔═════════ Forecast ═════════╗
                                    │ Attack                         │║                            ║
                                    │ Overcast        +1 use  active │║ Test Mage     Frost Element║
                                    └────────────────────────────────┘║ Frost         Frost        ║
                                                                      ║ 10/10         10/10        ║
                                                                      ║ HP 16 ███▒▒   HP 30 █████  ║
                                                                      ║ Hit  95       Hit  93      ║
                                                                      ║ Crit 0        Crit 1       ║
                                                                      ║ heals 6                    ║
                                                                      ║ ────────────────────────── ║
                                                                      ║ +6 hp    →  1              ║
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      ║             2 ←  7 dmg     ║
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      ║ ────────────────────────── ║
                    ▒▒≈≈≈≈====······....♣♣♣♣....                      ║  6 ×1     Total  7 ×1      ║
                    ..▒▒≈≈..··..............╦╦..                      ║                            ║
                    MaFrBr····....Br..▓▓▓▓▓▓▓▓..                      ║                            ║
                    Kn♣♣··Lo..╦╦......▓▓░░╦╦▓▓..                      ║                            ║
                    ♣♣♣♣··..Ar........▓▓░░░░▓▓..                      ║                            ║
                    ♣♣♠♠··............▓▓▓▓▐▌▓▓..                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ╚════════════════════════════╝
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 Left/Right target · Up/Down art · f cast · d back                                         F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbcccccccddddddbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeebbddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddbbdfffffffffdddddgggggggggggggb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbdhhhhhdddddddddhhhhhddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdhhhhhdddddddddhhhhhddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdhhddddiiijjdddhhddddkkkkkddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdhhhdddddddddddhhhddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdhhhhddddddddddhhhhdddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdcccccccddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdbbbbbbbbbbbbbbbbbbbbbbbbbbdb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddhddhddddddddddddddb
aaaaaaaaaaaaaaaaaaaallllllmmmmnnnnooooppppqqqqrraaaaaaaaaaaaaaaaaaaaaabdddddddddddddhdhddddddddddddb
aaaaaaaaaaaaaaaaaaaallllmmmmnnnnssttssooooqqqqqqaaaaaaaaaaaaaaaaaaaaaabdbbbbbbbbbbbbbbbbbbbbbbbbbbdb
aaaaaaaaaaaaaaaaaaaauummmmvvvvssssssnnnnoooonnnnaaaaaaaaaaaaaaaaaaaaaabdddddddddddhhhhhddddddddddddb
aaaaaaaaaaaaaaaaaaaannuummnnssnnnnnnnnnnnnnnwwnnaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaxxyyzzssssnnnnAAnnBBBBBBBBnnaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaxxoossxxnnwwnnnnnnBBCCwwBBnnaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaoooossnnxxnnnnnnnnBBCCCCBBnnaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaooppssnnnnnnnnnnnnBBBBDDBBnnaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEa
aEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaEEEEEEEEa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:panel_bg bg:panel_border_focus
f = fg:player bg:panel_bg
g = fg:enemy bg:panel_bg
h = fg:text_dim bg:panel_bg
i = fg:hp_mid bg:panel_bg
j = fg:hp_low bg:panel_bg
k = fg:hp_high bg:panel_bg
l = fg:water bg:sea
m = fg:water bg:water_bg
n = fg:grass bg:grass_bg
o = fg:forest bg:forest_bg
p = fg:thicket bg:thicket_bg
q = fg:mountain bg:mountain_bg
r = fg:peak bg:peak_bg
s = fg:road bg:road_bg
t = fg:enemy bg:road_bg
u = fg:ice bg:ice_bg
v = fg:wood bg:water_bg
w = fg:fort bg:fort_bg
x = fg:player bg:grass_bg
y = fg:enemy bg:#4c271c
z = fg:enemy bg:#50281d
A = fg:enemy bg:grass_bg
B = fg:stone bg:stone_bg
C = fg:floor bg:floor_bg
D = fg:wood bg:stone_bg
E = fg:text_dim bg:black
--- overlays ---
over  209,270 14x2  hp_high
over  161,270 14x2  hp_high
over  225,286 14x2  hp_high
over  193,254 14x2  hp_high
over  273,254 14x2  hp_high
over  273,206 14x2  hp_high
over  177,254 14x2  hp_high
over  161,254 14x2  hp_high
over  175,240 3x1  cursor
over  175,240 1x3  cursor
over  189,240 3x1  cursor
over  191,240 1x3  cursor
over  175,253 3x1  cursor
over  175,251 1x3  cursor
over  189,253 3x1  cursor
over  191,251 1x3  cursor
